added methods and params to symbol table